novas implementações
